--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,15 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.3</version>
         </dependency>
-        
-		<dependency>
+	
+	<dependency>
+	  <!-- google calendar API from https://developers.google.com/api-client-library/java/apis/calendar/v3 -->
+	  <groupId>com.google.apis</groupId>
+	  <artifactId>google-api-services-calendar</artifactId>
+	  <version>v3-rev258-1.23.0</version>
+	</dependency>
+	
+	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>1.2.0.RELEASE</version>
