--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 	  <artifactId>google-api-services-calendar</artifactId>
 	  <version>v3-rev258-1.23.0</version>
 	</dependency>
+
+	<dependency>
+	  <!-- apache commons Math >> 3.6.1 -->
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-math3</artifactId>
+	  <version>3.6.1</version>
+	</dependency>
 	
 	<dependency>
             <groupId>org.springframework.boot</groupId>
