added google guava

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 	  <artifactId>commons-math3</artifactId>
 	  <version>3.6.1</version>
 	</dependency>
+
+	<dependency>
+		<!-- Google Guava -->
+  		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+ 		<version>23.2-jre</version>
+	</dependency>
 	
 	<dependency>
             <groupId>org.springframework.boot</groupId>
