--- a/.classpath
+++ b/.classpath
@@ -35,5 +35,6 @@
 	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="C:/Source/demo-web-project/lib/jackson-core-2.9.2.jar"/>
 	<classpathentry kind="lib" path="C:/Source/demo-web-project/lib/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Source/demo-web-project/lib/gson-2.8.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
