--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 		<artifactId>guava</artifactId>
  		<version>23.2-jre</version>
 	</dependency>
+
+	<!-- G suite activities API from google -->
+	<dependency>
+	  <groupId>com.google.apis</groupId>
+	  <artifactId>google-api-services-appsactivity</artifactId>
+	  <version>v1-rev46-1.23.0</version>
+	</dependency>
 	
 	<dependency>
 		<groupId>junit</groupId>
