testing google auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8080
+
+#Google Calendar API Configuration
+google.client.client-id=717245789797-8rq8gfemfpls1puqpkh6lqmum0q01vpd.apps.googleusercontent.com
+google.client.client-secret=SpgMf-YIIF6Si8t_x7P837JH
+google.client.access-token-uri=https://accounts.google.com/o/oauth2/token
+google.client.user-authorization-uri=https://accounts.google.com/o/oauth2/auth
+google.client.client-authentication-scheme=query
+google.client.scope=profile,email,https://www.googleapis.com/auth/calendar
+google.resource.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
+google.resource.prefer-token-info=true
+google.client.redirectUri=http://localhost:8080/cs480/home
 
