--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,19 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- Spring boot starter with jdbc -->
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>6.0.6</version>
+		</dependency>
+		
+		
         <dependency>
             <!-- jsoup HTML parser library @ https://jsoup.org/ -->
             <groupId>org.jsoup</groupId>
