--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ google.resource.user-info-uri=https://www.googleapis.com/oauth2/v2/userinfo
 google.resource.prefer-token-info=true
 google.client.redirectUri=http://localhost:8080/cs480/home
 
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=12345
