--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.0.RELEASE</version>
+		<version>1.3.0.RELEASE</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>1.5.7.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
@@ -42,28 +43,29 @@
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- Spring boot starter with jdbc -->
-		<dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-		  <groupId>mysql</groupId>
-		  <artifactId>mysql-connector-java</artifactId>
-		  <version>6.0.6</version>
-		</dependency>
-		<!-- allows for clickable buttons in html pages -->
-		<dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	  <scope>test</scope>
+	</dependency>
+	<!-- Spring boot starter with jdbc -->
+	<dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-jdbc</artifactId>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>6.0.6</version>
+	</dependency>
+
+	<!-- allows for clickable buttons in html pages -->
+	<dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
 		
         <dependency>
             <!-- jsoup HTML parser library @ https://jsoup.org/ -->
@@ -87,10 +89,10 @@
 	</dependency>
 
 	<dependency>
-		<!-- Google Guava -->
-  		<groupId>com.google.guava</groupId>
-		<artifactId>guava</artifactId>
- 		<version>23.2-jre</version>
+	  <!-- Google Guava -->
+  	  <groupId>com.google.guava</groupId>
+	  <artifactId>guava</artifactId>
+ 	  <version>23.2-jre</version>
 	</dependency>
 
 	<!-- G suite activities API from google -->
@@ -107,18 +109,27 @@
 	  <version>1.23.0</version>
 	  <type>pom</type>
 	</dependency>
-	
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.12</version>
-		<scope>test</scope>
+        <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
 	
 	<dependency>
+	  <groupId>org.springframework.cloud</groupId>
+	  <artifactId>spring-cloud-starter-oauth2</artifactId>
+	   <version>1.2.1.RELEASE</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-web</artifactId>
+	    <version>4.2.3.RELEASE</version>
+	</dependency>
+		
+	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>1.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
 	</dependencies>
