--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.RELEASE</version>
+		<version>1.4.2.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -25,14 +25,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>1.5.7.RELEASE</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
@@ -42,13 +35,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-
-	<dependency>
-	  <groupId>junit</groupId>
-	  <artifactId>junit</artifactId>
-	  <version>4.12</version>
-	  <scope>test</scope>
-	</dependency>
 	<!-- Spring boot starter with jdbc -->
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
@@ -112,6 +98,7 @@
         <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-security</artifactId>
+	  <version>1.4.2.RELEASE</version>
 	</dependency>
 	
 	<dependency>
@@ -132,7 +119,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+      </dependencies>
+
+      <dependencyManagement>
+	<dependencies>
+	  <dependency>
+	    <groupId>org.springframework.cloud</groupId>
+	    <artifactId>spring-cloud-dependencies</artifactId>
+	    <version>Camden.SR2</version>
+	    <type>pom</type>
+	    <scope>import</scope>
+	  </dependency>
 	</dependencies>
+      </dependencyManagement>
+      
 
 	<build>
 		<plugins>
