--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,11 @@ spring:
 # Database configuration
   datasource:
     platform: mysql
-    url: jdbc:mysql:http://homdevdb.cylr0zjow1ge.us-west-1.rds.amazonaws.com/
+    url: jdbc:mysql://homdevdb.cylr0zjow1ge.us-west-1.rds.amazonaws.com:3306/
     username: homdev
     password: homdev480
-    driverClassName: com.mysql.jdbc.Driver 
+   # driverClassName: com.mysql.jdbc.Driver 
+    
 # Spring Security configuration
 security:
   oauth2:
