--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,13 @@
 	  <version>1.23.0</version>
 	  <type>pom</type>
 	</dependency>
-        <dependency>
+	<dependency> 
+		<groupId>com.google.apis</groupId> 
+		<artifactId>google-api-services-oauth2</artifactId> 
+		<version>v2-rev65-1.17.0-rc</version> 
+	</dependency>
+	
+    <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-security</artifactId>
 	  <version>1.4.2.RELEASE</version>
