change to redirect url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ google.resource.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 google.resource.prefer-token-info=true
 google.client.clientId=1009700773461-fc1leqha280auu2duur3f2edoluteo0v.apps.googleusercontent.com
 google.client.clientSecret=ePVBJ3JAWx10yMXT7mFuV-0S
-google.client.redirectUri=http://localhost:8080/login/google
+google.client.redirectUri=http://student-schedule.com/login/google
