--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ google:
   client-authentication-scheme: query
   client-id: 1009700773461-fc1leqha280auu2duur3f2edoluteo0v.apps.googleusercontent.com
   client-secret: ePVBJ3JAWx10yMXT7mFuV-0S
-  redirectUri: http://localhost:8080/login/google
+  redirectUri: http://student-schedule.com/login/google
   scope: profile,email, https://www.googleapis.com/auth/calendar
   user-authorization-uri: https://acounts.google.com/o/oauth2/auth?access_type=offline&prompt=consent
  resource:
